# RSVD-error-correction

./: .gitignore  README.md  benchmark.py  diagnose.py  hypothesis_test.py  main.ipynb  pyproject.toml  requirements.txt  rsvd.py  s-transform.py  s_transform.py  test_matrices.py
experiments/: analysis.ipynb  benchmark.py  config.py  hypothesis_test.py  parameter_sweep.py  visualisations.ipynb
rsvd_correction/: __init__.py  free_probability.py  matrix_generators.py  rsvd.py
rsvd_correction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
