[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rsvd-correction"
version = "0.1.0"
description = "Randomized SVD with free-probability-based singular value correction"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rsvd_correction*", "experiments*"]
